# drift-bench

./: .gitignore  BENCHMARK_DESIGN.md  CLAUDE.md  README.md  REVIEW.md  _build_dashboard.py  dashboard.html  dashboard_data.json  pyproject.toml
scenarios/: dummy-ai-game-narratives.yaml  dummy-microservices-vs-monolith.yaml  dummy-remote-work.yaml  dummy-tabs-vs-spaces.yaml
src/drift_bench/: cli.py  conversation.py  judge.py  llm.py  models.py  runner.py
tests/: __init__.py  test_stance_drift.py  test_stance_prompt_integration.py
tests/fixtures/stance/: balanced.txt  office_strong.txt  pushback_remote_claim.txt  remote_strong.txt
