[project]
name = "drift-bench"
version = "0.1.0"
description = "Measures opinion drift in language models"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.60",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
drift-bench = "drift_bench.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/drift_bench"]
